--- a/public/css/events.css
+++ b/public/css/events.css
@@ -137,10 +137,25 @@
 .askInWrap .themeBtnToggle{
 	width:100%;
 }
-.askInWrap .suspended{
+.eventItemWrap[data-eventstate="suspended"] .askIn{ 
 	color: rgb(61, 51, 51); 
-	background: rgb(255, 240, 220); 
-	}
+	background: rgb(255, 240, 220);  
+}
+.eventItemWrap[data-eventstate="frozen"] { 
+	opacity: .5!important; 	
+}
+.eventItemWrap[data-eventstate="frozen"] *{ 
+	color:#666; 	
+}
+.eventItemWrap[data-eventstate="frozen"] *:hover{ 
+	cursor: default; 	
+}
+.eventItemWrap[data-eventstate="frozen"] .askIn{ 
+	background: white!important;	
+	border: 1px solid #9E9E9E;
+	color: black;
+}
+
 .askInWrap .asking{
 	/* color: rgb(61, 51, 51); */ 
 	background: rgb(140, 140, 140); 
@@ -253,8 +268,11 @@ input[type="number"]{
 	margin:25px 0;
 }
 #noEvents{
+	margin-top:85px; 
+}
+h3{
 	color: #888;
-	margin-top: 100px;
+	margin-top: 15px;
 	letter-spacing: 1px;
 	font-size: .9em;
 }
@@ -281,3 +299,6 @@ label[for="tags"]{
 	-webkit-user-select: none;  /* Chrome all / Safari all */    -moz-user-select: none;     /* Firefox all */    -ms-user-select: none;
 }
 
+#frozenTimezone{
+	margin-top:130px;
+}
