--- a/public/css/events.css
+++ b/public/css/events.css
@@ -1,6 +1,7 @@
 #eventsWrap{
-    width: 82%;
-} 
+    width: 90%;
+    background: white;
+}  
 #createEventIcon{
 	font-size: .8em;
 	text-shadow: 0 0 1px rgb(131, 131, 131);
@@ -9,46 +10,60 @@
 }
 #eventsListWrap{
 	margin-top: 30px;
+	margin-bottom: 50px;
+	text-align: center;
 }
 #eventsListWrap div.eventItemWrap:last-child{
-	 border-bottom:none;
+}
+.eventItemLayer{
+	background:white;
+	padding: 10px;
 }
 #eventListWrap *{
 	color:#555;
 }
-#e-status{
-}
-#e-name{
-	text-align: left;
-}
 
 .eventItemWrap{
+	background: rgb(249, 249, 249);
 	font-size: .9em;
 	-webkit-transition: all .15s;
 	transition: all .15s;
 	color: rgb(56, 56, 56);
-	width: 25%;
-	height: 300px;
-	margin: 10px 0;
-	padding-right: 20px;
+	width: 290px;
+	margin: 10px 10px;
+	padding: 5px;
+	border: 1px solid rgb(236, 236, 236);
 	box-sizing: border-box;
-	float: left;
 	position: relative;
-	z-index: -1;
+	text-align: left;
+	display: inline-block;
 }
 .eventItemWrap:hover{
 	/* background: rgb(245, 245, 245); */
 }
+.e-asker{
+	display:inline-block; 
+}
 .e-guests{
 	font-size: 1.1em;
-	height: 0;
 	position: relative;
-	bottom: 30px;
-	left: 124px;
+	width: 178px;
+	text-align:center;
+
+	margin-top: 10px;
+	color: rgb(163, 163, 163);
+}
+.e-desc{
+	margin: 10px 0;
+	margin-left: 6px;
+	color: #838383;
 }
 .e-infos{
 	border-bottom: 1px solid #dde;
 	height: 100%;
+}
+.e-image{
+	float:left;
 }
 .e-location{
     
@@ -59,11 +74,10 @@
 
     font-family: 'Raleway';
 
-    text-align: center;
+    text-align: right;
     
 
-    text-transform: none;
-    border-radius: 20px;
+    margin: 5px 0;
 }
 .e-status{
 	width: 70px;
@@ -80,35 +94,36 @@
 }
 .e-name{
 	font-weight: bolder;
+	font-size: 1.1em;
 	color: rgb(70, 70, 70);
 	text-transform: uppercase;
 	font-family: 'Raleway';
-	margin-bottom: 10px;
-	margin-right: 10px;
-	text-align: center;
+	position:relative;
+	margin-bottom: 7px;
+	padding-left: 5px;
+	text-align: left;
 }
 
 .e-hour{
 	position: relative;
+	width: 178px;
 	text-align: center;
-	font: bold 2.7em 'Ubuntu';
+	font: bolder 2.7em 'Lato';
+	color: #4A4A4A;
 	letter-spacing: -1px;
-	color: #B3B3B3;
-	display: inline-block;
-	top: -30px;
-}
-.e-max-guest{
-	width:100px;
+	text-decoration: underline;
 }
 .e-head{
-	margin-right:20px;
-	-webkit-transition: box-shadow 0.4s;
-	transition: box-shadow 0.4s;
 	height: 70px;
-	display:inline-block;
+	margin-bottom:10px;
+	padding-bottom:20px;
+	border-bottom:1px solid #eec;
 }
-.e-head:hover{
-	cursor:pointer;
+
+{
+}
+.e-head div{
+	display:inline-block;
 }
 .e-active{
 	-webkit-box-shadow: 0 0 25px rgb(128, 128, 128);
@@ -116,7 +131,7 @@
 }
 .e-body{
 	display: block;
-	margin: 20px 0;
+	margin: 10px 0;
 }
 .e-body i.icon-lamp{
 	height:50px;
@@ -130,12 +145,37 @@
 	text-align: center;
 }
 .askInWrap{
-	float: right;
-	margin-bottom: 5px;
 	width: 100%;
+	position: relative;
 }
-.askInWrap .themeBtnToggle{
+.askInWrap .idle{
 	width:100%;
+	position: relative;
+	z-index: 1;
+}
+.askInWrap .asked{
+	width: 77%;
+}
+.askInWrap .chatIconWrap{
+	width: 22%;
+height: 100%; 
+box-sizing: border-box;
+	background: rgb(230, 230, 230);
+position: absolute;
+right: 0;
+top: 0;
+
+text-align: center; 
+padding-top: 7px;
+
+	color: rgb(136, 136, 136);
+}
+.chatIconWrap.active{
+	background: rgb(187, 187, 187);
+color: rgb(86, 86, 86);
+}
+.chatIconWrap i{
+	font-size:1.3em;
 }
 .eventItemWrap[data-eventstate="suspended"] .askIn{ 
 	color: rgb(61, 51, 51); 
@@ -157,7 +197,7 @@
 }
 
 .askInWrap .asking{
-	/* color: rgb(61, 51, 51); */ 
+	color: white; 
 	background: rgb(140, 140, 140); 
 	}
 /* CSS pour créer un évenements */
