--- a/public/css/fontello/css/fontello-codes.css
+++ b/public/css/fontello/css/fontello-codes.css
@@ -1,41 +1,20 @@
 
 .icon-emo-coffee:before { content: '\e800'; } /* '' */
-.icon-spin3:before { content: '\e801'; } /* '' */
-.icon-crown:before { content: '\e802'; } /* '' */
-.icon-heart:before { content: '\e803'; } /* '' */
-.icon-heart-empty:before { content: '\e804'; } /* '' */
-.icon-mail:before { content: '\e805'; } /* '' */
-.icon-mail-alt:before { content: '\e806'; } /* '' */
-.icon-user:before { content: '\e807'; } /* '' */
-.icon-chat:before { content: '\e808'; } /* '' */
-.icon-rocket:before { content: '\e809'; } /* '' */
-.icon-fork:before { content: '\e80a'; } /* '' */
-.icon-facebook:before { content: '\e80b'; } /* '' */
-.icon-rocket-1:before { content: '\e80c'; } /* '' */
-.icon-graduation-cap:before { content: '\e80d'; } /* '' */
-.icon-trophy:before { content: '\e80e'; } /* '' */
-.icon-spread:before { content: '\e80f'; } /* '' */
-.icon-th-list:before { content: '\e810'; } /* '' */
-.icon-hourglass:before { content: '\e811'; } /* '' */
-.icon-lamp:before { content: '\e812'; } /* '' */
-.icon-users:before { content: '\e813'; } /* '' */
-.icon-check:before { content: '\e814'; } /* '' */
-.icon-cancel:before { content: '\e815'; } /* '' */
-.icon-menu:before { content: '\e816'; } /* '' */
-.icon-pencil:before { content: '\e817'; } /* '' */
-.icon-glass:before { content: '\e818'; } /* '' */
-.icon-barcode:before { content: '\e819'; } /* '' */
-.icon-delicious:before { content: '\e81a'; } /* '' */
-.icon-glass-1:before { content: '\e81b'; } /* '' */
-.icon-down-open-big:before { content: '\e81c'; } /* '' */
-.icon-left-open-big:before { content: '\e81d'; } /* '' */
-.icon-right-open-big:before { content: '\e81e'; } /* '' */
-.icon-up-open-big:before { content: '\e81f'; } /* '' */
-.icon-ok:before { content: '\e820'; } /* '' */
-.icon-plus:before { content: '\e821'; } /* '' */
-.icon-minus:before { content: '\e822'; } /* '' */
-.icon-direction:before { content: '\e823'; } /* '' */
-.icon-chat-alt:before { content: '\e824'; } /* '' */
-.icon-block:before { content: '\e825'; } /* '' */
-.icon-cog:before { content: '\e826'; } /* '' */
-.icon-map:before { content: '\e827'; } /* '' */
+.icon-mail:before { content: '\e801'; } /* '' */
+.icon-mail-alt:before { content: '\e802'; } /* '' */
+.icon-user:before { content: '\e803'; } /* '' */
+.icon-ok:before { content: '\e804'; } /* '' */
+.icon-cancel:before { content: '\e805'; } /* '' */
+.icon-chat-1:before { content: '\e806'; } /* '' */
+.icon-attention:before { content: '\e807'; } /* '' */
+.icon-trash-empty:before { content: '\e808'; } /* '' */
+.icon-facebook:before { content: '\e809'; } /* '' */
+.icon-star:before { content: '\e80a'; } /* '' */
+.icon-users:before { content: '\e80b'; } /* '' */
+.icon-user-1:before { content: '\e80c'; } /* '' */
+.icon-user-add:before { content: '\e80d'; } /* '' */
+.icon-plus:before { content: '\e80e'; } /* '' */
+.icon-mail-1:before { content: '\e80f'; } /* '' */
+.icon-cog:before { content: '\e810'; } /* '' */
+.icon-glass:before { content: '\e811'; } /* '' */
+.icon-chat:before { content: '\e812'; } /* '' */
