--- a/public/css/fontello/css/fontello-codes.css
+++ b/public/css/fontello/css/fontello-codes.css
@@ -18,3 +18,4 @@
 .icon-cog:before { content: '\e810'; } /* '' */
 .icon-glass:before { content: '\e811'; } /* '' */
 .icon-chat:before { content: '\e812'; } /* '' */
+.icon-barcode-1:before { content: '\e814'; } /* '' */
