--- a/public/css/fontello/css/fontello.css
+++ b/public/css/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?17495397');
-  src: url('../font/fontello.eot?17495397#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?17495397') format('woff'),
-       url('../font/fontello.ttf?17495397') format('truetype'),
-       url('../font/fontello.svg?17495397#fontello') format('svg');
+  src: url('../font/fontello.eot?5438182');
+  src: url('../font/fontello.eot?5438182#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?5438182') format('woff'),
+       url('../font/fontello.ttf?5438182') format('truetype'),
+       url('../font/fontello.svg?5438182#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?17495397#fontello') format('svg');
+    src: url('../font/fontello.svg?5438182#fontello') format('svg');
   }
 }
 */
@@ -69,4 +69,6 @@
 .icon-cog:before { content: '\e810'; } /* '' */
 .icon-glass:before { content: '\e811'; } /* '' */
 .icon-chat:before { content: '\e812'; } /* '' */
+.icon-left-open-big:before { content: '\e813'; } /* '' */
 .icon-barcode-1:before { content: '\e814'; } /* '' */
+.icon-right-open-big:before { content: '\e815'; } /* '' */
