--- a/public/css/manage.css
+++ b/public/css/manage.css
@@ -5,13 +5,111 @@
 #cancelEvent{ 
 }
 #askersListWrap{
-    font-size: .9em;
     margin-top: 50px;
 }
+#askersListWrap >i{
+    font-size: 2.4em; 
+    color: #ccc;
+    position: absolute;
+    top: 173px;
+    z-index: 2000;
+}
+#askersListWrap >i:hover{
+    color:black;
+}
+#askersListWrap > i.icon-left-open-big{
+    
+}
 
+#askersListWrap > i.icon-right-open-big{
+    right: -30px;
+    
+}
 
-.a-active{
-	-webkit-box-shadow: 0 0 15px #FF3232;
-	box-shadow: 0 0 11px #A3A3A3;
-	border: 1px solid rgb(190, 190, 190);
+.a-item{
+    text-align: center;
+    width: 700px;
+    height: 270px;
+    margin: 40px auto;
+    display: none;
+    padding: 22px;
+    overflow: auto;
+}
+.a-item.active{
+    display:block;
+}
+.a-picture{
+    /* background: #EAEAEA; */
+
+    width: 124px;
+    box-shadow: 0 0 5px rgb(213, 213, 213);
+    padding: 5px;
+    display: inline-block;
+    margin-right: 25px;
+}
+
+.a-head{
+}
+
+.a-name{
+}
+
+.a-age{
+}
+
+.a-body{
+    display: inline-block;
+    vertical-align: top;
+    width: 300px;
+    color: #A8A8A8;
+    text-align: left;
+    font-family: 'Corbel';
+}
+.a-body > div{
+    margin: 12px 0;
+    height: 21px;
+    width: 400px;
+}
+.a-body .label{
+    font: bolder .8em 'Lato';
+    color: rgb(74, 74, 74);
+    width:80px;
+    margin-right:15px;
+    text-align:right;
+    display:inline-block;
+}
+
+.a-desc{
+    height: auto!important;
+
+}
+.a-desc div{
+    display:inline-block;
+    width: 237px;
+    font-size: .9em;
+    line-height: 1.35em;
+}
+.a-desc span{
+    vertical-align:top;
+}
+.a-btn{
+    margin-top: 30px!important;
+    position: relative;
+}
+
+.a-btn .themeBtn{
+    margin: 0 2px;
+    width: 92px;
+    height: 32px;
+    border-radius:3px;
+}
+.a-btn i{
+    margin-right:3px; 
+}
+.a-btn .btn-accept{
+
+}
+
+.a-btn .btn-refuse{
+	
 }
