--- a/public/css/events.css
+++ b/public/css/events.css
@@ -182,8 +182,9 @@
 	text-align: center;
 }
 .askInWrap{
-	width: 100%;
+	width: 80%;
 	position: relative;
+	margin: auto;
 }
 .askInWrap .idle{
 	width:100%;
@@ -195,21 +196,30 @@
 }
 .askInWrap .chatIconWrap{
 	width: 22%;
-height: 100%; 
+
+	height: 100%; 
 box-sizing: border-box;
-	background: rgb(230, 230, 230);
 position: absolute;
 right: 0;
-top: 0;
+
+	top: 0;
 
 text-align: center; 
 padding-top: 7px;
 
-	color: rgb(136, 136, 136);
+	color: rgb(107, 107, 107);
+	background: #E6E6E6;
 }
 .chatIconWrap.active{
-	background: rgb(187, 187, 187);
-color: rgb(86, 86, 86);
+
+	border-radius: 1px;
+	
+
+	color: rgb(255, 255, 255);
+	
+
+	background: rgb(86, 86, 86);
+
 }
 .chatIconWrap i{
 	font-size:1.3em;
