--- a/public/css/style.css
+++ b/public/css/style.css
@@ -106,6 +106,16 @@ body > header > h1{
 	font-family: 'Lato';
 	display: inline-block;
 }
+body > header > h5{
+	display: inline;
+position: relative;
+font-size: 11px;
+font-family: 'Lato';
+color: rgb(48, 48, 48);
+text-shadow: 0 0 1px rgb(208, 208, 208);
+top: 21px;
+left: -157px;
+}
 body > header i{
 	position: absolute;
 top: 6px;
@@ -550,10 +560,10 @@ top: 33px;
 }
 #thumbWrap{
 	position: fixed;
-	width: 120px;
+	width: 220px;
 	height: 50px;
 	top: -2px;
-	right: 300px;
+	right: 10%;
 	/* background: white; */
 	padding: 10px;
 	border-radius: 2px;
@@ -576,7 +586,7 @@ top: 33px;
 }
 #thumbName{
 	font-weight:normal;
-	text-align: center;
+	text-align: left;
 	font-size: 1.2em;
 	margin-left: 8px;
 	margin-bottom: 3px;
@@ -711,7 +721,7 @@ body > footer{
 }
 #loginWrapp i.icon-facebook{
     position: absolute;
-    left: 324px;
+    left: 321px;
     background: none;
     top: 0px;
 }
@@ -727,14 +737,20 @@ body > footer{
 	color: white;
 	/* text-shadow: 0 0 1px rgb(113, 37, 37); */
 }
-#loginWrapp input[type="submit"]#login-fb{
+#login-fb{
 	width: 31px;
+	height: 22px;
 	text-align: right;
 	background: #D84343;
-	/* display: none; */
+	float: right;
+	margin-top: 1px;
+	border-radius: 2px;
 	color: white;
 }
-#lost_pw,
+#login-fb:hover{
+	cursor:pointer;
+}
+#lost_pw, 
 #pw_remember{
 	position: absolute;
 	margin-top: 7px;
@@ -758,7 +774,7 @@ body > footer{
 	border-radius: 3px!important;
 }
 ::-webkit-input-placeholder {
-   color: #666;
+   color: #999;
    font-weight:normal;
 }
 :-moz-placeholder { /* Firefox 18- */
